bubba-frontend (1.9.12) claire; urgency=low

  * fix selectables in users and mail, remove luser fields for non-admin 

 -- Carl Fürstenberg <carl@excito.com>  Fri, 19 Mar 2010 16:18:59 +0100

bubba-frontend (1.9.11) claire; urgency=low

  * adding a2enmod proxy in preinst 

 -- Carl Fürstenberg <carl@excito.com>  Fri, 19 Mar 2010 13:41:15 +0100

bubba-frontend (1.9.10) claire; urgency=low

  * update album user functionallity 

 -- Carl Fürstenberg <carl@excito.com>  Thu, 18 Mar 2010 19:48:29 +0100

bubba-frontend (1.9.9) karmic; urgency=low

  * merge 

 -- Carl Fürstenberg <carl@excito.com>  Thu, 18 Mar 2010 12:55:20 +0100

bubba-frontend (1.9.8) claire; urgency=low

  * Reenable overwritten fix for login/logout button

 -- PA Nilsson <pa@excito.com>  Wed, 17 Mar 2010 21:15:09 +0100

bubba-frontend (1.9.7) vlaire; urgency=low

  * make IE not complain too much
  * make a lot work better

 -- Carl Fürstenberg <carl@excito.com>  Wed, 17 Mar 2010 19:10:13 +0100

bubba-frontend (1.9.6) karmic; urgency=low

  * make progress visible 

 -- Carl Fürstenberg <carl@excito.com>  Tue, 16 Mar 2010 18:53:25 +0100

bubba-frontend (1.9.5) claire; urgency=low

  * Fixes and fixes and fixes and fixes 

 -- Carl Fürstenberg <carl@excito.com>  Tue, 16 Mar 2010 18:23:50 +0100

bubba-frontend (1.9.4) claire; urgency=low

  * Magnus updates on texts

 -- Tor Krill <tor@excito.com>  Tue, 16 Mar 2010 14:57:45 +0100

bubba-frontend (1.9.3) karmic; urgency=low

  * Testbuild 

 -- PA Nilsson <pa@excito.com>  Tue, 16 Mar 2010 11:27:35 +0100

bubba-frontend (1.9.2) claire; urgency=low

  * Testbuild.

 -- PA Nilsson <pa@excito.com>  Tue, 16 Mar 2010 08:00:18 +0100

bubba-frontend (1.9.1) claire; urgency=low

  *  Test build for new UI release, needed to test updater.

 -- PA Nilsson <pa@excito.com>  Sun, 14 Mar 2010 23:13:41 +0100

bubba-frontend (1.9.0) claire; urgency=low

  * Add reverse proxy for mt-daapd

 -- Tor Krill <tor@excito.com>  Thu, 11 Mar 2010 18:55:34 +0100
