@@ -20,6 +20,9 @@ case "$1" in
 		if [ ! -e /etc/apache2/mods-enabled/proxy.load ]; then
 			a2enmod proxy
 		fi			
+		if [ ! -e /etc/apache2/mods-enabled/proxy_http.load ]; then
+			a2enmod proxy_http
+		fi					
 	fi
     ;;
 
